--- a/Content/style.css
+++ b/Content/style.css
@@ -94,8 +94,8 @@ body{
 	color: #FFF;
 	font-family: 'Cookie', cursive;
 	display: block;
-	padding: 30px 62.99px;
-	font-size: 1.65em;
+	padding: 20px 62.99px;
+	font-size: 1.30iem;
 	transition: 0.5s ease;
 	-o-transition: 0.5s ease;
 	-webkit-transition: 0.5s ease;
