--- a/Views/Home/index.cshtml
+++ b/Views/Home/index.cshtml
@@ -49,7 +49,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<ul>
 						<li class="active"><a href="~/Home/index">Home</a></li>
 						<li><a href="~/Home/about">About</a></li>
-						<li><a href="~/Home/newrecipes">New Ricipes</a></li>
+						<li><a href="~/Home/newrecipes">New Recipes</a></li>
 						<li><a href="~/Home/products">Products</a></li>
 						<li><a href="~/Home/news">News</a></li>
 						<li><a href="~/Home/contact">Contact</a></li>
@@ -63,7 +63,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!---start-logo-with-slider----->
 			<div class="logo-slider">
 				<div class="logo">
-					<a href="index.html"><img src="~/images/logo.png" title="logo" /></a>
+					<a href="~/Home/index"><img src="~/images/logo.png" title="logo" /></a>
 				</div>
 					<!--start-image-slider---->
 					<div class="image-slider">
