--- a/Views/Home/products.cshtml
+++ b/Views/Home/products.cshtml
@@ -47,10 +47,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="top-header">
 				<div class="top-nav">
 					<ul>
-                        <li class="active"><a href="~/Home/index">Home</a></li>
+                        <li><a href="~/Home/index">Home</a></li>
                         <li><a href="~/Home/about">About</a></li>
-                        <li><a href="~/Home/newrecipes">New Ricipes</a></li>
-                        <li><a href="~/Home/products">Products</a></li>
+                        <li><a href="~/Home/newrecipes">New Recipes</a></li>
+                        <li class="active"><a href="~/Home/products">Products</a></li>
                         <li><a href="~/Home/news">News</a></li>
                         <li><a href="~/Home/contact">Contact</a></li>
                         <div class="clear"> </div>
@@ -86,22 +86,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="left-sidebar-top">
 					<h3><span>Top</span> List Recipes</h3>
 					<ul>
-						<li><a href="#">Lorem Ipsum is no text</a></li>
-						<li><a href="#">Contrary to text popular</a></li>
-						<li><a href="#">random text. It text has </a></li>
-						<li><a href="#">roots in a piecetext of</a></li>
-						<li><a href="#">classical litextterature</a></li>
-						<li><a href="#">Richard McClitextntock,</a></li>
-						<li><a href="#">Latin profetextssor at</a></li>
-						<li><a href="#">Virginia, lootextked u</a></li>
-						<li><a href="#">one of the mtextotextre</a></li>
-						<li><a href="#">obscure Latexttitextn </a></li>
-						<li><a href="#">Lorem Ipsum cotextmes</a></li>
-						<li><a href="#">Bonorum et Maltextorum</a></li>
-						<li><a href="#">Richard McClitextntock,</a></li>
-						<li><a href="#">Latin profetextssor at</a></li>
-						<li><a href="#">Virginia, lootextked u</a></li>
-						<div class="clear"> </div>
+                        <li><a href="#">Pakistani Recipes</a></li>
+                        <li><a href="#">Chinese Recipes</a></li>
+                        <li><a href="#">Meat Recipes</a></li>
+                        <li><a href="#">Chicken Recipes</a></li>
+                        <li><a href="#">Sweets</a></li>
+                        <li><a href="#">Oven Recipes</a></li>
+                        <li><a href="#">Snacks</a></li>
+                        <div class="clear"> </div>
 					</ul>
 				</div>
 				<div class="clear"> </div>
