--- a/Views/Home/about.cshtml
+++ b/Views/Home/about.cshtml
@@ -49,7 +49,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<ul>
 						<li><a href="~/Home/index">Home</a></li>
 						<li class="active"><a href="~/Home/about">About</a></li>
-						<li><a href="~/Home/newrecipes">New Ricipes</a></li>
+						<li><a href="~/Home/newrecipes">New Recipes</a></li>
 						<li><a href="~/Home/products">Products</a></li>
 						<li><a href="~/Home/news">News</a></li>
 						<li><a href="~/Home/contact">Contact</a></li>
