--- a/Views/Home/contact.cshtml
+++ b/Views/Home/contact.cshtml
@@ -49,7 +49,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<ul>
 						<li><a href="~/Home/index">Home</a></li>
 						<li><a href="~/Home/about">About</a></li>
-						<li><a href="~/Home/newrecipes">New Ricipes</a></li>
+						<li><a href="~/Home/newrecipes">New Recipes</a></li>
 						<li><a href="~/Home/products">Products</a></li>
 						<li><a href="~/Home/news">News</a></li>
 						<li class="active"><a href="~/Home/contact">Contact</a></li>
@@ -74,12 +74,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       				</div>
       			<div class="company_address">
 				     	<h3>Company Information :</h3>
-						    	<p>500 Lorem Ipsum Dolor Sit,</p>
-						   		<p>22-56-2-9 Sit Amet, Lorem,</p>
-						   		<p>USA</p>
-				   		<p>Phone:(00) 222 666 444</p>
+						    	<p>Punjab University</p>
+						   		<p>Hostel 17</p>
+						   		<p>Room 214 , Lahore</p>
+				   		<p>Phone:03136549042</p>
 				   		<p>Fax: (000) 000 00 00 0</p>
-				 	 	<p>Email: <span>info@mycompany.com</span></p>
+				 	 	<p>Email: <span>BCSF12M553@pucit.edu.pk</span></p>
 				   		<p>Follow on: <span>Facebook</span>, <span>Twitter</span></p>
 				   </div>
 				</div>				
